# cg-old

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  README.md  README2016.md  README2017.md
Assignment_1/: CMakeLists.txt
Assignment_1/requirements/: Assignment-1_Ray_Tracing.tex  General_Rules.tex
Assignment_1/src/: main.cpp  utils.h
Assignment_2/: CMakeLists.txt
Assignment_2/extra/: main_blending.cpp  main_border.cpp  main_depth.cpp  main_positions.cpp  main_properties.cpp  main_view.cpp
Assignment_2/requirements/: Assignment-2_2D_Editor.tex  i.idraw  p.idraw  view.idraw
Assignment_2/src/: Helpers.cpp  Helpers.h  Program.cpp  Program.h  main.cpp
Assignment_3/requirements/: Assignment3_3D.tex  ex3.tex
Assignment_4/requirements/: Assignment4.tex  ex4.tex
